# bazel-mediawiki

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE.bzlmod  composer.json  debug  dump-composer-BUILD
rules_composer/: BUILD  MODULE.bazel  README.md  composer.bzl  extensions.bzl  php.bzl
