module(
    name = "mediawiki",
    version = "0.0.1",
)

bazel_dep(name = "rules_composer", version = "")
local_path_override(
    module_name = "rules_composer",
    path = "./build/rules_composer",
    )

composer = use_extension("@rules_composer//:extensions.bzl", "composer")
composer.install()

use_repo(composer, "composer")

composer.run(binary = 'jsonlint')
